# pfio

./: .flake8  .gitignore  README.md  pyproject.toml
.github/workflows/: python-package.yml
pfio/cache/: file_cache.py  multiprocess_file_cache.py
pfio/v2/: fs.py  http_cache.py  local.py  pathlib.py  s3.py  zip.py
tests/cache_tests/: test_multiprocess_file_cache.py
tests/v2_tests/: test_custom_scheme.py  test_fs.py  test_http_cache.py  test_local.py  test_pathlib.py  test_s3.py  test_s3_zip.py  test_zip.py
