[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pfio"
dynamic = ["version"]
description = "PFN IO library"
readme = "README.md"
authors = [
    {name = "Tianqi Xu", email = "tianqi@preferred.jp"},
    {name = "Kota Uenishi", email = "kota@preferred.jp"},
]
license = "MIT"
keywords = ["filesystem", "hdfs", "chainer", "development"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Filesystems",
]
requires-python = ">=3.9"
dependencies = [
    "boto3",
    "deprecation",
    "urllib3",
]

[project.optional-dependencies]
test = ["tox>=4", "pytest", "flake8", "autopep8", "parameterized", "isort", "moto[server]>=5.0.0", "numpy", "mypy"]
# When updating doc deps, docs/requirements.txt should be updated too
doc = ["sphinx", "sphinx_rtd_theme"]
bench = ["numpy>=1.19.5", "torch>=1.9.0", "Pillow<=8.2.0"]
hdfs = ["pyarrow>=6.0.0"]
trace = ["pytorch-pfn-extras"]

[project.urls]
Homepage = "https://github.com/pfnet/pfio"

[tool.setuptools.dynamic]
version = {attr = "pfio.version.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["pfio*"]

[tool.pytest.ini_options]
testpaths = ["tests", "docs"]
python_files = ["test_*.py"]
python_classes = ["Test"]
python_functions = ["test"]
minversion = "2.9"
addopts = "--doctest-modules --doctest-glob='*.rst'"

[tool.mypy]

[[tool.mypy.overrides]]
module = [
    "deprecation",
    "urllib3",
    "urllib3.*",
    "boto3",
    "botocore.*",
    "pyarrow",
    "pyarrow.*",
    "pytorch_pfn_extras.*",
]
ignore_missing_imports = true

[tool.tox]
env_list = ["py39", "py310", "py311", "py312", "py313", "doc"]

[tool.tox.env_run_base]
deps = [".[test,trace]"]
package = "skip"
commands = [
    ["flake8", "pfio", "tests"],
    ["autopep8", "-r", "pfio", "tests", "--diff"],
    ["isort", ".", "--check", "--diff"],
    ["mypy", "pfio"],
    ["pytest", "-W", "error::deprecation.UnsupportedWarning", "tests", "-s", "-v"],
]

[tool.tox.env.doc]
deps = [".[doc]"]
package = "skip"
change_dir = "docs"
commands = [["make", "html"]]
allowlist_externals = ["make"]
